<resources>
    <string name="app_name">Student Management</string>
    <string name="error_message">Failed.</string>
    <string name="success_message">Succeed.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_user">Please enter username</string>
    <string name="login_password">Please enter password</string>
    <string name="login_button">Sign in</string>
    <string name="login_forgetpassword">Forgot pasword</string>
    <string name="employee_staff">STAFF</string>
    <string name="infor_average_score">AVERAGE SCORE</string>

    <!-- Course-->
    <string name="socre_theory">Socre Theory :  </string>
    <string name="socre_practice">Socre Practice :  </string>
    <string name="roll_call">Roll-call :  </string>

    <!-- Calendar-->
    <string name="calendar_subject">Subject</string>
    <string name="calendar_teacher">Teacher</string>
    <string name="calendar_status">Status</string>
    <string name="calendar_attendance">Attendance</string>

    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>


    <!-- Change password -->
    <string name="pw_length">Password min length is 6</string>
    <string name="rpw_correct">RePassword is not correct</string>
</resources>
