<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- days toolbar -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/previous_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/calendar_prev"
            />

        <LinearLayout
            android:id="@+id/date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_toRightOf="@id/previous_month"
            android:layout_toEndOf="@id/previous_month">
            <!-- date title -->
            <TextView
                android:id="@+id/date_display_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textColor="#222222"
                android:text="2018"/>
            <!-- date title -->
            <TextView
                android:id="@+id/display_current_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#222222"
                android:text="17 Feb"/>
            <!-- date title -->
            <TextView
                android:id="@+id/date_display_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#222222"
                android:text="Saturday"/>

            <Button
                android:id="@+id/date_display_today"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="11sp"
                android:text="Go to today"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/next_month"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:layout_toEndOf="@id/date_display"
            android:layout_toRightOf="@id/date_display"
            android:src="@drawable/calendar_next"/>
    </RelativeLayout>

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sun"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thu"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sat"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>

    <!-- days view -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:text="@string/calendar_subject"
        android:textSize="@dimen/textsize_calendar"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_calendar_subject"
        android:text="SQL Language"
        android:textSize="@dimen/textsize_calendar"
        android:textStyle="italic"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/calendar_teacher"
        android:textSize="@dimen/textsize_calendar"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_calendar_teacher"
        android:text="Ngo Thanh Tung"
        android:textSize="@dimen/textsize_calendar"
        android:textStyle="italic"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/calendar_status"
        android:textSize="@dimen/textsize_calendar"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_calendar_status"
        android:layout_margin="15dp"
        android:text="no status"
        android:textSize="@dimen/textsize_calendar"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/calendar_attendance"
        android:textSize="@dimen/textsize_calendar"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_calendar_attendance"
        android:layout_margin="15dp"
        android:text="10 days"
        android:textSize="@dimen/textsize_calendar"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>