<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_background">
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/login_margin">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="-150dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/login_logo_aptech"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/login_icon_size"
                android:layout_height="@dimen/login_icon_size"
                android:background="@drawable/login_user"
                android:layout_marginRight="@dimen/login_margin_right"/>
            <EditText
                android:id="@+id/tv_login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user"
                android:textStyle="italic"
                android:textColor="@color/gray_light"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/gray_light"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/login_icon_size"
                android:layout_height="@dimen/login_icon_size"
                android:background="@drawable/login_password"
                android:layout_marginRight="@dimen/login_margin_right"/>
            <EditText
                android:id="@+id/tv_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:textStyle="italic"
                android:textColor="@color/gray_light"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_light"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/login_margin_top"
            android:background="@drawable/login_border"
            android:text="@string/login_button"
            android:textColor="@color/gray_light"
            android:textSize="@dimen/login_textsize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_light"
            android:text="@string/login_forgetpassword"
            android:layout_marginTop="@dimen/login_margin_top"
            android:textStyle="italic"
            android:textSize="@dimen/login_textsize"/>

    </LinearLayout>
</RelativeLayout>
